--- a/style/style.css
+++ b/style/style.css
@@ -296,8 +296,8 @@ header {
 
 /* footer */
 footer {
-    width: 100vw;
-    margin: 10px 0px;
+    max-width: 100vw;
+    margin: 10px auto;
 }
 
 #footer {
